--- a/frontend/src/components/products/Products.module.css
+++ b/frontend/src/components/products/Products.module.css
@@ -4,6 +4,7 @@
   gap: 1rem;
   justify-content: center;
   margin: 0 auto;
+  margin-top: 3rem;
   max-width: 80vw;
   padding: 0.5rem;
   width: 100%;
@@ -70,7 +71,7 @@
   gap: 0.5rem;
   justify-content: center;
   padding: 0.5rem 1rem;
-  transition: 200ms ease-in-out;
+  transition: background-color 200ms ease-in-out, color 200ms ease-in-out;
   visibility: hidden;
   width: 100%;
 }
