--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -5,11 +5,11 @@
   display: flex;
   gap: 2rem;
   height: 4rem;
-  justify-content: space-between;
   padding-inline: 1rem;
 }
 
 .title {
+  flex: 1;
   font-size: 1.5rem;
   font-weight: bold;
   min-width: 160px;
@@ -18,6 +18,7 @@
 .searchWrapper {
   align-items: center;
   display: flex;
+  flex: 2;
   height: 2rem;
   max-width: 800px;
   width: 100%;
@@ -55,6 +56,31 @@
   border: 3px solid black;
   border-left: none;
   border-radius: 0 5px 5px 0;
+}
+
+.sectionWrapper {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  gap: 1rem;
+  justify-content: flex-end;
+}
+
+.userContainer {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.userPhoto {
+  border-radius: 50%;
+  height: 2rem;
+  width: 2rem;
+}
+
+.user {
+  font-size: 13px;
 }
 
 .cart {
