--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   align-items: center;
-  background-color: white;
-  box-shadow: 0 0 5px rgb(0 0 0 / 10%);
+  background-color: rgb(255 241 89);
+  box-shadow: 0 0 5px rgba(0 0 0 / 10%);
   display: flex;
   gap: 2rem;
   height: 4rem;
@@ -19,43 +19,31 @@
   align-items: center;
   display: flex;
   flex: 2;
-  height: 2rem;
-  max-width: 800px;
+  height: 2.5rem;
+  max-width: 600px;
   width: 100%;
 }
 
 .searchBar {
   align-items: center;
-  border: 2px solid black;
-  border-right: none;
+  border: none;
   display: flex;
-  height: 2rem;
+  font-size: 16px;
+  height: 100%;
+  outline: none;
   padding-inline: 1rem;
   width: 100%;
 }
 
-.searchBar:focus {
-  border: 3px solid black;
-  border-radius: 5px 0 0 5px;
-  border-right: none;
-  outline: none;
-}
-
-
 .searchButton {
   aspect-ratio: 1;
-  background-color: transparent;
-  border: 2px solid black;
-  border-left: none;
+  background-color: white;
+  border: none;
+  color: rgba(0 0 0 / 70%);
   cursor: pointer;
+  font-size: 18px;
   height: 100%;
   right: 0.5rem;
-}
-
-.searchBar:focus ~ .searchButton {
-  border: 3px solid black;
-  border-left: none;
-  border-radius: 0 5px 5px 0;
 }
 
 .sectionWrapper {
@@ -90,7 +78,7 @@
 }
 
 .cartAmount {
-  background-color: #f0c040;
+  background-color: red;
   border-radius: 50px;
   color: white;
   font-size: 0.8rem;
