--- a/frontend/src/pages/products/Products.module.css
+++ b/frontend/src/pages/products/Products.module.css
@@ -1,18 +1,29 @@
-.card {
+.main {
+  align-items: center;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 1rem;
   justify-content: center;
-  margin: 0 auto;
-  margin-top: 3rem;
-  max-width: 80vw;
-  padding: 0.5rem;
+  min-height: calc(100vh - 4rem);
+  padding-bottom: 2rem;
+  padding-inline: 1rem;
   width: 100%;
 }
 
-.cardWrapper {
+.cardContainer {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
+  margin: 3rem;
+  margin-bottom: 0;
+  max-width: 80vw;
+}
+
+.card {
   cursor: pointer;
-  max-width: 250px;
+  margin: 0 auto;
+  max-width: 300px;
+  width: 100%;
 }
 
 .cardItem {
@@ -81,7 +92,7 @@
   color: black;
 }
 
-.cardWrapper:hover {
+.card:hover {
   .cardItem {
     border-radius: 5px 5px 0 0;
   }
@@ -91,9 +102,34 @@
   }
 }
 
+.pagination {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+  list-style: none;
+}
 
-@media (width <= 1440px) {
-  .card {
-    max-width: 90vw;
-  }
+.pageLink, .previous, .next, .break {
+  align-items: center;
+  background-color: white;
+  border-radius: 5px;
+  color: black;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  padding: 0.3rem 0.5rem;
+  user-select: none;
+}
+
+.pageLink:hover, .previous:hover, .next:hover, .active {
+  background-color: royalblue;
+  color: white;
+}
+
+.disabledLink {
+  background-color: #ccc;
+  border-radius: 5px;
+  color: #666;
+  cursor: not-allowed;
 }
