--- a/frontend/src/pages/cart/Cart.module.css
+++ b/frontend/src/pages/cart/Cart.module.css
@@ -1,51 +1,87 @@
 .main {
-  align-items: center;
+  background-color: white;
+  display: flex;
+  min-height: 100vh;
+}
+
+.productsContainer {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 2rem;
+  height: 100vh;
+  overflow-y: auto;
+  padding: 4rem 5rem;
+}
+
+.productsOverflow {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  overflow-y: auto;
+}
+
+.productsOverflow::-webkit-scrollbar {
+  background-color: rgb(215 215 215);
+  width: 0.5rem;
+}
+
+.productsOverflow::-webkit-scrollbar-thumb {
+  background-color: grey;
+}
+
+.header {
+  border-bottom: 2px solid lightgray;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  min-height: 100vh;
-  padding: 10px;
+  padding-bottom: 2rem;
 }
 
-.productCard {
+.leaveCart {
   align-items: center;
-  border-radius: 5px;
+  color: rgb(50 0 255);
+  display: flex;
+  font-weight: 700;
+  gap: 0.5rem;
+}
+
+.headerInfo {
+  align-items: center;
   display: flex;
   gap: 1rem;
   justify-content: space-between;
-  max-width: 800px;
-  width: 100%;
 }
 
-.productImage {
-  border-radius: 5px;
-  height: 80px;
-  max-width: 80px;
-  object-fit: cover;
-  transition: all 0.3s ease;
-  width: 100%;
+.headerTitle, .cartAmount, .cartTitle {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.cartAmount {
+  font-size: 1.5rem;
+}
+
+.productCard {
+  display: flex;
+  gap: 1rem;
 }
 
 .detailsWrapper {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
+  justify-content: center;
+  padding-right: 1rem;
   width: 100%;
-}
-
-.productName {
-  -webkit-box-orient: vertical;
-  display: -webkit-box;
-  font-size: 16px;
-  -webkit-line-clamp: 2;
-  overflow-y: hidden;
 }
 
 .wrapper {
   align-items: center;
   display: flex;
-  gap: 0.5rem;
+  gap: 1rem;
   justify-content: space-between;
+  padding-right: 2rem;
 }
 
 .btnWrapper {
@@ -53,72 +89,107 @@
   display: flex;
 }
 
-.btn {
+.quantityBtn {
   align-items: center;
-  border-radius: 5px;
+  background-color: rgb(85 85 85);
+  border: none;
+  color: white;
   cursor: pointer;
   display: flex;
-  font-size: 16px;
+  font-size: 2rem;
   font-weight: 700;
-  height: 30px;
+  height: 35px;
   justify-content: center;
-  transition: all 0.3s ease;
-  width: 30px;
+  width: 35px;
 }
 
-.increase {
-  border: 2px solid green;
-  color: green;
+.quantityBtn:first-child {
+  border-radius: 5px 0 0 5px;
+}
+
+.quantityBtn:last-child {
+  border-radius: 0 5px 5px 0;
 }
 
 .productQuantity {
   align-items: center;
-  border-radius: 5px;
+  border: 1px solid rgba(0 0 0 / 30%);
   display: flex;
-  font-size: 16px;
-  font-weight: 700;
-  height: 30px;
+  height: 35px;
   justify-content: center;
-  min-width: 30px;
+  outline: none;
+  text-align: center;
+  width: 35px;
 }
 
-.decrease {
-  border: 2px solid red;
-  color: red;
+.productImage {
+  aspect-ratio: 1;
+  height: 100%;
+  max-height: 150px;
+  object-fit: cover;
 }
 
-.totalWrapper {
-  align-items: center;
+.checkout {
   background-color: rgb(235 235 235);
-  bottom: 0;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
-  max-width: 800px;
-  padding: 2rem 10px;
-  position: fixed;
-  width: 100%;
+  gap: 2rem;
+  padding: 6.2rem 3rem;
+}
+
+.cartTitle {
+  border-bottom: 2px solid lightgray;
+  padding-bottom: 2rem;
+  padding-right: 5rem;
+}
+
+.checkoutInfo {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.checkoutAmount, .checkoutPrice {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.checkoutBtn {
+  border: none;
+  border-radius: 0.5rem;
+  color: white;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 0.5rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.checkoutBtn:hover {
+  box-shadow: 0 0 10px rgba(0 0 0 / 80%);
+  transform: translateY(-2px);
+}
+
+.cleanCartBtn {
+  background-color: #999;
+}
+
+.cleanCartBtn:hover {
+  background-color: rgb(248 76 76);
+}
+
+.finish {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: auto;
 }
 
 .totalPrice {
-  align-items: center;
-  display: flex;
-  gap: 0.5rem;
-  justify-content: space-between;
-  width: 100%;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .btnCheckout {
-  align-items: center;
-  background-color: #f0c040;
-  border-radius: 5px;
-  color: #000;
-  cursor: pointer;
-  display: flex;
-  font-size: 16px;
-  font-weight: 700;
-  height: 30px;
-  justify-content: center;
-  transition: all 0.3s ease;
-  width: 100%;
+  background-color:rgb(50 0 255);
 }
