fix: faz o carrinho de comrpas aparecer no header

--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -95,8 +95,12 @@
 }
 
 @media (width < 768px) {
-  .title, .sectionWrapper {
+  .title, .userContainer {
     display: none;
+  }
+
+  .sectionWrapper {
+    flex: 0
   }
 
   .header {
