--- a/frontend/src/pages/products/Products.module.css
+++ b/frontend/src/pages/products/Products.module.css
@@ -133,3 +133,13 @@
   color: #666;
   cursor: not-allowed;
 }
+
+@media (width <= 850px) {
+  .cardItem {
+    border-radius: 5px 5px 0 0;
+  }
+
+  .cardBuy {
+    visibility: visible;
+  }
+}
