--- a/frontend/src/pages/productDetails/ProductDetails.module.css
+++ b/frontend/src/pages/productDetails/ProductDetails.module.css
@@ -2,6 +2,186 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  padding: 3rem;
+}
+
+.containerWrapper {
+  background-color: white;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  padding: 2rem 0.5rem;
+}
+
+.productContainer {
+  display: flex;
+  gap: 1rem;
+  height: 100%;
+  max-height: 500px;
+}
+
+.thumbnails {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  overflow: hidden auto;
+  padding-inline: 0.5rem;
+  padding-right: 1rem;
+}
+
+.thumbnails::-webkit-scrollbar {
+  background-color: rgb(215 215 215);
+  width: 0.3rem;
+}
+
+.thumbnails::-webkit-scrollbar-thumb {
+  background-color: grey;
+}
+
+.altImages {
+  background-color: white;
+  border-radius: 5px;
+  height: 100%;
+  height: 60px;
+  object-fit: contain;
+  width: 60px;
+}
+
+.selectedImage {
+  border: 2px solid rgb(50 0 255);
+}
+
+.mainImage {
+  border-radius: 5px;
+  object-fit: contain;
+  width: 500px;
+}
+
+.productDetails {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 800px;
+  padding: 1rem;
+}
+
+.cardTop {
+  align-items: center;
+  color: rgba(0 0 0 / 55%);
+  display: flex;
+  font-size: 0.8rem;
+  gap: 1rem;
+  justify-content: space-between;
+}
+
+.heart {
+  color: blue;
+  cursor: pointer;
+  height: 20px;
+  margin-right: 1.5rem;
+  width: 20px;
+}
+
+.priceWrapper {
+  align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1rem;
+}
+
+.ratingContainer {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+
+.star {
+  color: gold;
+  cursor: pointer;
+  margin: 0.1rem;
+}
+
+.buttonsContainer {
+  display: flex;
+  gap: 2rem;
   justify-content: center;
-  margin: 2rem 0;
+}
+
+.btn {
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 0.8rem;
+  width: 100%;
+}
+
+.buyBtn {
+  background-color: rgb(50 0 255);
+  color: white;
+}
+
+.addCartBtn {
+  background-color: rgba(65 137 230 / 15%);
+  color: rgb(50 0 255);
+}
+
+@media (width <= 1150px) {
+  .buttonsContainer {
+    flex-direction: column;
+  }
+  
+  .containerWrapper, .productContainer {
+    gap: 2rem;
+  }
+
+  .mainImage {
+    width: 300px;
+  }
+}
+
+@media (width <= 768px) {
+  .containerWrapper {
+    flex-direction: column;
+    position: relative;
+  }
+
+  .mainImage {
+    flex: 1;
+    width: 200px;
+  }
+
+  .cardTop {
+    left: 0;
+    padding: 1rem;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+
+  .heart {
+    margin: 0;
+  }
+
+  .productContainer {
+    margin-top: 2rem;
+  }
+
+}
+
+@media (width <= 600px) {
+  .productContainer {
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+
+  .thumbnails {
+    flex-direction: row;
+    overflow: auto hidden;
+    padding: 0;
+    width: 100px;
+  }
 }
