--- a/frontend/src/pages/notFound/NotFound.module.css
+++ b/frontend/src/pages/notFound/NotFound.module.css
@@ -22,7 +22,9 @@
 
 .notFoundButton {
   animation: glitch 2s infinite;
+  border: none;
   color: black;
+  cursor: pointer;
   font-size: 30px;
   margin-top: 10px;
   text-decoration: none;
