--- a/frontend/src/pages/productDetails/ProductDetails.module.css
+++ b/frontend/src/pages/productDetails/ProductDetails.module.css
@@ -44,6 +44,7 @@
 .altImages {
   background-color: white;
   border-radius: 5px;
+  cursor: pointer;
   height: 100%;
   height: 60px;
   object-fit: contain;
@@ -54,10 +55,25 @@
   border: 2px solid rgb(50 0 255);
 }
 
-.mainImage {
+.imageContainer {
+  align-items: center;
   border-radius: 5px;
+  display: flex;
   object-fit: contain;
   width: 500px;
+}
+
+.mainImage {
+  height: 100%;
+  object-fit: contain;
+  width: 100%;
+}
+
+.magnify {
+  border: 2px solid grey;
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
 }
 
 .productDetails {
@@ -143,7 +159,7 @@
     gap: 2rem;
   }
 
-  .mainImage {
+  .imageContainer {
     width: 300px;
   }
 }
@@ -154,7 +170,7 @@
     position: relative;
   }
 
-  .mainImage {
+  .imageContainer {
     flex: 1;
     width: 200px;
   }
