--- a/frontend/src/pages/productDetails/ProductDetails.module.css
+++ b/frontend/src/pages/productDetails/ProductDetails.module.css
@@ -1,3 +1,14 @@
+.message {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 2rem;
+  font-weight: 600;
+  gap: 1rem;
+  justify-content: center;
+  min-height: 100vh;
+}
+
 .main {
   align-items: center;
   display: flex;
