--- a/frontend/src/pages/register/Register.module.css
+++ b/frontend/src/pages/register/Register.module.css
@@ -44,13 +44,17 @@
 }
 
 .button {
+  align-items: center;
   background-color: rgb(59 130 246);
   border: none;
   border-radius: 5px;
   color: white;
   cursor: pointer;
+  display: flex;
   font-size: 1rem;
   font-weight: 500;
+  height: 39px;
+  justify-content: center;
   padding: 0.5rem;
 }
 
