--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -55,27 +55,45 @@
   justify-content: flex-end;
 }
 
-.userContainer {
+.userWrapper {
   align-items: center;
   display: flex;
-  flex-direction: column;
   gap: 0.5rem;
 }
 
-.userPhoto {
-  border-radius: 50%;
-  height: 2rem;
-  width: 2rem;
-}
-
 .userIcon {
+  background-color: white;
   border-radius: 50%;
-  height: 1.5rem;
-  width: 1.5rem;
+  color: rgb(59 130 246);
+  height: 30px;
+  width: 30px;
 }
 
-.user {
-  font-size: 13px;
+.redirect {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.9rem;
+}
+
+.link, .currentUser {
+  font-weight: 600;
+}
+
+.userRedirect {
+  display: flex;
+  font-size: 0.9rem;
+  gap: 0.2rem;
+}
+
+.userRedirect > span {
+  font-weight: 700;
+}
+
+.logoutBtn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 0.9rem;
 }
 
 .cart {
