--- a/frontend/src/components/header/Header.module.css
+++ b/frontend/src/components/header/Header.module.css
@@ -1,25 +1,20 @@
 .header {
   align-items: center;
   background-color: rgb(255 241 89);
-  box-shadow: 0 0 5px rgba(0 0 0 / 10%);
   display: flex;
-  gap: 2rem;
-  height: 4rem;
-  padding-inline: 2rem;
+  gap: 1rem;
+  justify-content: space-around;
+  padding: 1rem;
 }
 
 .title {
-  cursor: pointer;
-  flex: 1;
   font-size: 1.5rem;
-  font-weight: bold;
-  min-width: 160px;
+  white-space: nowrap;
 }
 
-.searchWrapper {
+.searchForm {
   align-items: center;
   display: flex;
-  flex: 2;
   height: 2.5rem;
   max-width: 600px;
   width: 100%;
@@ -32,7 +27,7 @@
   font-size: 16px;
   height: 100%;
   outline: none;
-  padding-inline: 1rem;
+  padding-left: 1rem;
   width: 100%;
 }
 
@@ -47,245 +42,121 @@
   right: 0.5rem;
 }
 
-.sectionWrapper {
-  align-items: center;
+.rightContainer {
   display: flex;
-  flex: 1;
-  gap: 1rem;
-  justify-content: space-around;
+  gap: 2rem;
 }
 
-.userWrapper {
+.userProfile {
   align-items: center;
+  cursor: pointer;
   display: flex;
   gap: 0.5rem;
+}
+
+.userName {
+  max-width: 150px;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.userIcon {
-  background-color: white;
+.userImg {
   border-radius: 50%;
-  color: rgb(59 130 246);
-  height: 30px;
-  width: 30px;
+  height: 2rem;
+  width: 2rem;
 }
 
-.redirect {
-  display: flex;
-  flex-direction: column;
-  font-size: 0.9rem;
-}
-
-.link, .currentUser {
-  font-weight: 600;
-}
-
-.userRedirect {
-  display: flex;
-  font-size: 0.9rem;
-  gap: 0.2rem;
-}
-
-.userRedirect > span {
-  font-weight: 700;
-}
-
-.logoutBtn {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 0.9rem;
-}
-
-.routesContainer {
-  align-items: center;
+.routes {
   display: flex;
   gap: 1rem;
-  justify-content: center;
 }
 
-.routesContainer > a {
+.link {
   align-items: center;
   display: flex;
-  justify-content: center;
-  min-width: 30px;
+  gap: 0.5rem;
 }
 
-.cart {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-}
-
-.cartAmount {
-  background-color: red;
-  border-radius: 50px;
-  color: white;
-  font-size: 0.8rem;
-  padding: 1px 0.3rem;
-  position: absolute;
-  text-align: center;
-  top: 3px;
-}
-
-.icons {
-  color: black;
-  font-size: 1.3rem;
-}
-
-.mobileMenuBtn {
+.linkName {
   display: none;
 }
 
+.icons {
+  height: auto;
+  width: 1.2rem;
+}
+
+.link:nth-child(1) .icons {
+  color: #007bff;
+}
+
+.link:nth-child(2) .icons {
+  color: red;
+}
+
+.link:nth-child(3) .icons {
+  color: rgb(141 136 128);
+}
+
+.cartContainer {
+  display: flex;
+  position: relative;
+}
+
+.cartCount {
+  background-color: red;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 10px;
+  padding: 2px 6px;
+  position: absolute;
+  right: -3px;
+  top: -17px;
+}
+
+
 @media (width <= 768px) {
-  .title, .userContainer {
-    display: none;
-  }
-
   .header {
-    justify-content: space-between;
-    padding-inline: 1rem;
-  }
-
-  .searchWrapper {
-    max-width: none;
-  }
-
-  .sectionWrapper {
-    background-color: rgb(255 241 89);
-    flex: 0;
-    flex-direction: column;
-    height: 100%;
-    justify-content: space-between;
-    padding-bottom: 64px;
-    padding-inline: 1rem;
-    position: fixed;
-    top: 64px;
-    transition: 300ms;
-    width: 100%;
-  }
-
-  .menuOpen {
-    right: 0;
-  }
-
-  .menuClosed {
-    right: -100%;
-  }
-
-  .mobileMenuBtn {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    gap: 0.3rem;
-    padding: 0.3rem;
-  }
-
-  .bar {
-    background-color: black;
-    border-radius: 50px;
-    height: 3px;
-    transition: 300ms;
-    width: 25px;
-  }
-
-  .barActive:nth-child(1) {
-    transform: rotate(50deg) translate(5px, 6px);
-  }
-
-  .barActive:nth-child(2) {
-    opacity: 0;
-  }
-
-  .barActive:nth-child(3) {
-    transform: rotate(-50deg) translate(5px, -6px);
-  }
-
-  .userWrapper {
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .redirect {
-    width: 100%;
-  }
-
-  .userContent {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding-block: 1rem;
-    width: 100%;
-  }
-
-  .userContent > h1 {
-    font-size: 1.5rem;
-    text-align: center;
-  }
-
-  .ul {
-    border-block: 1px solid rgba(0 0 0 / 30%);
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    list-style: none;
-    padding: 2rem 1rem;
-  }
-
-  .ul > li {
-    align-items: center;
-    display: flex;
-    gap: 1rem;
-  }
-
-  .ul li > *:first-child {
-    font-size: 1.3rem;
-  }
-
-  .username {
-    align-items: center;
-    display: flex;
+    flex-wrap: wrap;
     gap: 0.5rem;
+    justify-content: space-between;
+    padding: 0.8rem;
   }
 
-  .btnWrapper {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: center;
-    padding-block: 1rem;
-    width: 100%;
-  }
-
-  .btn {
-    align-items: center;
-    background-color: rgb(59 130 246);
-    border: none;
-    border-radius: 5px;
-    color: white;
-    cursor: pointer;
-    display: flex;
+  .title {
     font-size: 1rem;
-    justify-content: center;
-    padding: 0.6rem;
-    width: 100%;
+  }
+
+  .searchForm {
+    height: 2rem;
+    max-width: none;
+    order: 1;
+  }
+
+  .icons {
+    width: 1rem;
+  }
+
+  .cartCount {
+    font-size: 8px;
+    padding: 2px 4px;
+    top: -13px;
+  }
+
+  .rightContainer {
+    gap: 1rem;
   }
 }
 
 @media (width <= 425px) {
-  .header {
-    gap: 1rem;
-  }
-  
-  .searchBar {
-    font-size: 14px;
-    padding-right: 0;
+  .userImg {
+    height: 1.5rem;
+    width: 1.5rem;
   }
 
-  .routesContainer {
+  .userName {
     display: none;
   }
+
 }
