--- a/frontend/src/components/loadingBtn/LoadingBtn.module.css
+++ b/frontend/src/components/loadingBtn/LoadingBtn.module.css
@@ -1,29 +1,10 @@
-.button {
-  align-items: center;
-  background-color: rgb(50 0 255);
-  border: none;
-  border-radius: 5px;
-  color: white;
-  cursor: pointer;
-  display: flex;
-  font-size: 2rem;
-  font-weight: 600;
-  height: 75px;
-  justify-content: center;
-  max-width: 400px;
-  padding: 1rem 2rem;
-  position: relative;
-  width: 100%;
-}
-
 .loading {
   animation: spin 1s linear infinite;
-  aspect-ratio: 1/1;
   border: 4px solid white;
   border-radius: 50%;
   border-top-color: black;
-  height: 60%;
-  position: absolute;
+  height: 20px;
+  width: 20px;
 }
 
 @keyframes spin {
