--- a/frontend/src/pages/login/Login.module.css
+++ b/frontend/src/pages/login/Login.module.css
@@ -45,13 +45,17 @@
 }
 
 .button {
+  align-items: center;
   background-color: rgb(59 130 246);
   border: none;
   border-radius: 5px;
   color: white;
   cursor: pointer;
+  display: flex;
   font-size: 1rem;
   font-weight: 500;
+  gap: 0.5rem;
+  justify-content: center;
   padding: 0.5rem;
 }
 
