--- a/frontend/src/pages/register/Register.module.css
+++ b/frontend/src/pages/register/Register.module.css
@@ -54,6 +54,7 @@
   display: flex;
   font-size: 1rem;
   font-weight: 500;
+  gap: 0.5rem;
   height: 39px;
   justify-content: center;
   padding: 0.5rem;
