--- a/frontend/src/pages/checkoutSuccess/CheckoutSuccess.module.css
+++ b/frontend/src/pages/checkoutSuccess/CheckoutSuccess.module.css
@@ -3,20 +3,15 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  height: calc(100vh - 64px);
+  height: calc(100vh - 6rem);
   justify-content: center;
 }
 
-.wrapper {
-  align-items: center;
-  display: flex;
-  gap: 1rem;
+.title {
+  font-size: 2rem;
+  font-weight: 700;
 }
 
-.links {
-  align-items: center;
-  color: rgb(50 0 255);
-  display: flex;
-  font-weight: 700;
-  gap: 0.5rem;
+.countdown {
+  font-size: 1.5rem;
 }
