--- a/frontend/src/pages/checkoutSuccess/CheckoutSuccess.module.css
+++ b/frontend/src/pages/checkoutSuccess/CheckoutSuccess.module.css
@@ -5,13 +5,15 @@
   gap: 1rem;
   height: calc(100vh - 6rem);
   justify-content: center;
+  padding: 2rem;
 }
 
 .title {
-  font-size: 2rem;
+  font-size: clamp(1rem, 5vw, 3rem);
   font-weight: 700;
+  white-space: nowrap;
 }
 
 .countdown {
-  font-size: 1.5rem;
+  font-size: clamp(0.8rem, 4vw, 2rem);
 }
