--- a/frontend/src/pages/favorites/Favorites.module.css
+++ b/frontend/src/pages/favorites/Favorites.module.css
@@ -1,13 +1,23 @@
+.errorMessage {
+  display: flex;
+  font-size: clamp(1rem, 5vw, 2rem);
+  font-weight: 600;
+  justify-content: center;
+  margin-top: 1rem;
+  min-height: calc(100vh - 5rem);
+}
+
 .main {
   align-items: center;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  min-height: 100vh;
+  min-height: calc(100vh - 9rem);
   padding: 2rem;
 }
 
 .container {
+  box-shadow: 1px 1px 5px rgb(0 0 0 / 10%);
   max-width: 800px;
   position: relative;
   width: 100%;
@@ -15,7 +25,8 @@
 
 .product {
   background-color: white;
-  border-radius: 10px;
+  border: 1px solid rgb(204 204 204);
+  border-radius: 5px;
   display: flex;
   gap: 1rem;
   padding: 1rem 0.5rem;
@@ -32,10 +43,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin-top: 1rem;
 }
 
 .priceWrapper {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5rem;
 }
 
@@ -47,3 +60,21 @@
   top: 15px;
 }
 
+.footer {
+  align-items: center;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+@media (width <= 500px) {
+  .container {
+    max-width: 350px;
+  }
+
+  .product {
+    align-items: center;
+    flex-direction: column;
+  }
+}
