--- a/frontend/src/pages/purchases/Purchases.module.css
+++ b/frontend/src/pages/purchases/Purchases.module.css
@@ -6,11 +6,11 @@
 }
 
 .errorMessage {
-  align-items: center;
   display: flex;
-  font-size: 1.5rem;
+  font-size: clamp(1rem, 5vw, 2rem);
   font-weight: 600;
   justify-content: center;
+  margin-top: 3rem;
   min-height: calc(100vh - 5rem);
 }
 
@@ -20,7 +20,7 @@
   flex-direction: column;
   gap: 1rem;
   justify-content: center;
-  margin-block: 2rem;
+  margin-block: 2rem 0;
   padding: 2rem;
 }
 
@@ -28,6 +28,7 @@
   background-color: white;
   border: 1px solid rgb(204 204 204);
   border-radius: 5px;
+  box-shadow: 1px 1px 5px rgb(0 0 0 / 10%);
   display: flex;
   flex-direction: column;
   max-width: 1300px;
@@ -101,6 +102,14 @@
 .button:last-child {
   background-color: rgb(65 137 230 / 15%);
   color: rgb(52 131 250);
+}
+
+.footer {
+  align-items: center;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  margin-bottom: 2rem;
 }
 
 @media (width <= 768px) {
