--- a/frontend/src/pages/login/Login.module.css
+++ b/frontend/src/pages/login/Login.module.css
@@ -31,11 +31,25 @@
   border-radius: 5px;
   font-size: 1rem;
   padding: 0.5rem;
+  width: 100%;
 }
 
 .input:focus {
   border-color: rgb(59 130 246);
   outline: none;
+}
+
+.passwordWrapper {
+  position: relative;
+}
+
+.passwordReveal {
+  cursor: pointer;
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  user-select: none;
 }
 
 .error {
