--- a/frontend/src/pages/favorites/Favorites.module.css
+++ b/frontend/src/pages/favorites/Favorites.module.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   gap: 1rem;
   min-height: calc(100vh - 9rem);
-  padding: 2rem;
+  padding: 3rem;
 }
 
 .container {
@@ -29,10 +29,11 @@
   border-radius: 5px;
   display: flex;
   gap: 1rem;
-  padding: 1rem 0.5rem;
+  padding: 1rem 1.5rem;
 }
 
 .image {
+  aspect-ratio: 1/1;
   border-radius: 10px;
   height: 100px;
   object-fit: cover;
@@ -68,7 +69,11 @@
   margin-bottom: 2rem;
 }
 
-@media (width <= 500px) {
+@media (width <= 768px) {
+  .main {
+    padding: 3rem 2rem;
+  }
+
   .container {
     max-width: 350px;
   }
@@ -76,5 +81,11 @@
   .product {
     align-items: center;
     flex-direction: column;
+  }
+
+  .image {
+    height: auto;
+    max-width: 200px;
+    width: 100%;
   }
 }
