--- a/frontend/src/pages/purchases/Purchases.module.css
+++ b/frontend/src/pages/purchases/Purchases.module.css
@@ -20,8 +20,7 @@
   flex-direction: column;
   gap: 1rem;
   justify-content: center;
-  margin-block: 2rem 0;
-  padding: 2rem;
+  padding: 3rem;
 }
 
 .purchaseContainer {
@@ -113,6 +112,10 @@
 }
 
 @media (width <= 768px) {
+  .main {
+    padding: 3rem 2rem;
+  }
+
   .purchaseContainer {
     max-width: 400px;
   }
