--- a/frontend/src/pages/favorites/Favorites.module.css
+++ b/frontend/src/pages/favorites/Favorites.module.css
@@ -7,6 +7,14 @@
   min-height: calc(100vh - 5rem);
 }
 
+.spinner {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  min-height: calc(100vh - 10rem);
+  width: 100%;
+}
+
 .main {
   align-items: center;
   display: flex;
